@@ -154,14 +154,15 @@ class AtlasTaskSetupper (TaskSetupperBase):
                                                 tmpLog.info('skip making double copy as destination={0} is not site={1}'.format(datasetSpec.destination,
                                                                                                                                 datasetSpec.site))
                                             else:
-                                                locForDouble = 'type=SCRATCHDISK'
+                                                locForDouble = '(type=SCRATCHDISK)\notforextracopy=1'
                                                 tmpMsg  = 'registering double copy '
                                                 tmpMsg += 'location="{0}" lifetime={1}days activity={2} for dataset={3}'.format(locForDouble,lifetime,
                                                                                                                                 activity,targetName)
                                                 tmpLog.info(tmpMsg)
                                                 tmpStat = ddmIF.registerDatasetLocation(targetName,locForDouble,copies=2,owner=userName,
                                                                                         lifetime=lifetime,activity=activity,
-                                                                                        grouping='NONE',weight='freespace')
+                                                                                        grouping='NONE',weight='freespace',
+                                                                                        ignore_availability=False)
                                                 if not tmpStat:
                                                     tmpLog.error('failed to register double copylocation {0} for {1}'.format(locForDouble,
                                                                                                                            targetName))
