@@ -1,5 +1,8 @@
 Release Notes
 
+* 8/23/2017
+  * using (type=SCRATCHDISK)\notforextracopy=1 for secondary copy of user output
+
 * 8/18/2017
   * added registerEsFiles
 
